tests/baselines/reference/orderMattersForSignatureGroupIdentity.errors.txt
==== tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts (1 errors) ====
    interface A {
        (x: { s: string }): string
        (x: { n: number }): number
    }
    
    interface B {
        (x: { s: string }): string
        (x: { n: number }): number
    }
    
    interface C {
        (x: { n: number }): number
        (x: { s: string }): string
    }
    
    var v: A;
    var v: B;
    
    v({ s: "", n: 0 }).toLowerCase();
    
    var w: A;
    var w: C;
        ~~~~
!!! orderMattersForSignatureGroupIdentity.ts(22,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'w' must be of type 'A', but here has type 'C'.
    
    w({ s: "", n: 0 }).toLowerCase();